--- a/config/deep_sea.yaml
+++ b/config/deep_sea.yaml
@@ -1,14 +1,19 @@
 env_name: DeepSeaMDP
-grid_size: 6
-horizon: 6
+grid_size: 5
+horizon: 5
 #learning_rates: [0.1 , 0.5, 1., 2., 0.00001, 0.001]
-learning_rates: []
-num_episodes: 100000
-num_runs: 30
+learning_rates: [0.1, 0.5]
+num_episodes: 1000
+num_runs: 5
 is_save_ind_file: True
-is_save_whole_file: True
+is_save_whole_file: False
 is_show_plot: False
 is_save_plot: False
+is_save_subopt_histories: True
+is_save_subopt_over_init_state_histories: True
+is_save_prob_optimal_action_histories: False
+is_save_subopt_over_init_state_last_iterate: False
+is_test_run: True
 
 # Plot only
-plot_directory: 29-07-2025---15-46-13
+plot_directory: 30-07-2025---21-16-53
