--- a/config/chain.yaml
+++ b/config/chain.yaml
@@ -1,14 +1,19 @@
 env_name: ChainMDP
-chain_len: 6
-horizon: 6
+chain_len: 4
+horizon: 4
 #learning_rates: [0.1 , 0.5, 1., 2., 0.00001, 0.001]
 learning_rates: []
-num_episodes: 100000
-num_runs: 30
+num_episodes: 1000
+num_runs: 2
 is_save_ind_file: True
-is_save_whole_file: True
+is_save_whole_file: False
 is_show_plot: False
 is_save_plot: False
+is_save_subopt_histories: False
+is_save_subopt_over_init_state_histories: False
+is_save_prob_optimal_action_histories: False
+is_save_subopt_over_init_state_last_iterate: True
+is_test_run: False
 
 # Plot only
 plot_directory: 29-07-2025---16-20
