--- a/config/chain.yaml
+++ b/config/chain.yaml
@@ -16,4 +16,4 @@ is_save_subopt_over_init_state_last_iterate: True
 is_test_run: False
 
 # Plot only
-plot_directory: 29-07-2025---16-20
+plot_directory: 20-10-2025---16-15-58
